sdk/csharp/OpenTimelineIO/Interop.cs


    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_clip_active_media_reference_key(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioBuffer outKey);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_clip_media_reference(IntPtr source, Native.OtioNode nodeHandle, IntPtr key, out Native.OtioNode outReference);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_clip_media_reference_count(IntPtr source, Native.OtioNode nodeHandle, out nuint outCount);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_clip_media_reference_key_at(IntPtr source, Native.OtioNode nodeHandle, nuint index, out Native.OtioBuffer outKey);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_clip_new(IntPtr target, IntPtr name, out Native.OtioNode outNode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_clip_remove_media_reference(IntPtr target, Native.OtioNode nodeHandle, IntPtr key, out Native.OtioNode outReference);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_clip_set_active_media_reference_key(IntPtr target, Native.OtioNode nodeHandle, IntPtr key);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_clip_set_media_reference(IntPtr target, Native.OtioNode nodeHandle, IntPtr key, Native.OtioNode reference);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_composable_new(IntPtr target, IntPtr name, out Native.OtioNode outNode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_composition_append_child(IntPtr target, Native.OtioNode parent, Native.OtioNode child);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_composition_child_at_time(IntPtr source, Native.OtioNode parent, Native.OtioRationalTime time, byte shallow, out Native.OtioNode outChild);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_composition_children_in_range(IntPtr source, Native.OtioNode parent, Native.OtioTimeRange searchRange, [In, Out] Native.OtioNode[]? outNodes, nuint capacity, out nuint outCount);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_composition_clear_children(IntPtr target, Native.OtioNode parent, [In, Out] Native.OtioNode[]? outNodes, nuint capacity, out nuint outCount);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_composition_detach_child(IntPtr target, Native.OtioNode parent, Native.OtioNode child);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_composition_find_children_of_kind(IntPtr source, Native.OtioNode parent, NodeKind kind, IntPtr searchRange, byte shallow, [In, Out] Native.OtioNode[]? outNodes, nuint capacity, out nuint outCount);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_composition_handles_of_child(IntPtr source, Native.OtioNode parent, Native.OtioNode child, out Native.OtioHandles outHandles);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_composition_has_child(IntPtr source, Native.OtioNode parent, Native.OtioNode child, out byte outHas);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_composition_index_of_child(IntPtr source, Native.OtioNode parent, Native.OtioNode child, out nuint outIndex);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_composition_insert_child(IntPtr target, Native.OtioNode parent, long index, Native.OtioNode child);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_composition_is_parent_of(IntPtr source, Native.OtioNode parent, Native.OtioNode other, out byte outIs);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_composition_neighbors_of(IntPtr target, Native.OtioNode parent, Native.OtioNode child, NeighborGapPolicy policy, out Native.OtioNode outBefore, out Native.OtioNode outAfter);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_composition_new(IntPtr target, IntPtr name, out Native.OtioNode outNode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_composition_range_of_child(IntPtr source, Native.OtioNode parent, Native.OtioNode child, out Native.OtioTimeRange outRange);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_composition_range_of_child_at_index(IntPtr source, Native.OtioNode parent, long index, out Native.OtioTimeRange outRange);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_composition_ranges_of_children(IntPtr source, Native.OtioNode parent, [In, Out] Native.OtioNode[]? outNodes, [In, Out] Native.OtioTimeRange[]? outRanges, nuint capacity, out nuint outCount);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_composition_remove_child(IntPtr target, Native.OtioNode parent, long index, out Native.OtioNode outChild);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_composition_trim_child_range(IntPtr source, Native.OtioNode parent, Native.OtioTimeRange childRange, out Native.OtioTimeRange outRange);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_composition_trimmed_range_of_child(IntPtr source, Native.OtioNode parent, Native.OtioNode child, out Native.OtioTimeRange outRange);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_composition_trimmed_range_of_child_at_index(IntPtr source, Native.OtioNode parent, long index, out Native.OtioTimeRange outRange);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_document_absorb(IntPtr target, ref IntPtr source, [In, Out] Native.OtioNode[]? outFrom, [In, Out] Native.OtioNode[]? outTo, nuint capacity, out nuint outCount);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_document_clone(IntPtr source, out IntPtr outDocument);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte otio_document_contains(IntPtr source, Native.OtioNode node);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_document_deep_clone(IntPtr target, Native.OtioNode node, out Native.OtioNode outNode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void otio_document_free(IntPtr document);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_document_from_json(IntPtr json, out IntPtr outDocument);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr otio_document_new();

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern nuint otio_document_node_count(IntPtr source);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_document_read_from_file(IntPtr path, out IntPtr outDocument);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_document_remove(IntPtr target, Native.OtioNode node);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_document_remove_recursive(IntPtr target, Native.OtioNode node);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_document_root(IntPtr source, out Native.OtioNode outNode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_document_set_root(IntPtr target, Native.OtioNode node);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_document_to_json(IntPtr source, nuint indent, out Native.OtioBuffer outJson);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_document_write_to_file(IntPtr source, IntPtr path, nuint indent);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_edit_fill(IntPtr target, Native.OtioNode item, Native.OtioNode track, Native.OtioRationalTime trackTime, ReferencePoint referencePoint);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_edit_insert(IntPtr target, Native.OtioNode item, Native.OtioNode composition, Native.OtioRationalTime time, byte removeTransitions, Native.OtioNode fillTemplate);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_edit_overwrite(IntPtr target, Native.OtioNode item, Native.OtioNode composition, Native.OtioTimeRange range, byte removeTransitions, Native.OtioNode fillTemplate);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_edit_remove(IntPtr target, Native.OtioNode composition, Native.OtioRationalTime time, byte fill, Native.OtioNode fillTemplate);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_edit_ripple(IntPtr target, Native.OtioNode item, Native.OtioRationalTime deltaIn, Native.OtioRationalTime deltaOut);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_edit_roll(IntPtr target, Native.OtioNode item, Native.OtioRationalTime deltaIn, Native.OtioRationalTime deltaOut);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_edit_slice(IntPtr target, Native.OtioNode composition, Native.OtioRationalTime time, byte removeTransitions);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_edit_slide(IntPtr target, Native.OtioNode item, Native.OtioRationalTime delta);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_edit_slip(IntPtr target, Native.OtioNode item, Native.OtioRationalTime delta);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_edit_trim(IntPtr target, Native.OtioNode item, Native.OtioRationalTime deltaIn, Native.OtioRationalTime deltaOut, Native.OtioNode fillTemplate);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_effect_effect_name(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioBuffer outName);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_effect_enabled(IntPtr source, Native.OtioNode nodeHandle, out byte outEnabled);
